# 21-eikonal-21-eikonal

./: .gitignore  CMakeLists.txt  README.md
LocalProblem/: main_eikonal.cpp
LocalProblem/include/: mesh.hpp
include/: EikonalSolver.hpp  Mesh.hpp  MeshElement.hpp  Node.hpp  ParallelEikonalSolver.hpp  VTKWriter.hpp  loadMesh.hpp
src/: EikonalSolver.cpp  main.cpp  main_global_solver.cpp
tests/: base.vtk  cube-5.vtk  q.vtk
